--- a/webdupe/index.html
+++ b/webdupe/index.html
@@ -80,7 +80,7 @@
       <button class="btnca btn btn-primary" onclick="showCredits()">Actions</button>
       <div class="sendleft center">
         <div class="credits">
-          <div class="center" id="headline"><a href="http://dvcs.w3.org/hg/speech-api/raw-file/tip/speechapi.html">WebDupe <br/>Web voice action plugin</a> demonstration</div>Google Chrome (Akash Patel [@patelakash317])
+          <div class="center" id="headline"><a href="http://dvcs.w3.org/hg/speech-api/raw-file/tip/speechapi.html">WebDupe.js <br/>Web voice action plugin</a> demonstration</div>Google Chrome (Akash Patel [@patelakash317])
         </div>
       </div>
     </p>
