--- a/webdupe/index.html
+++ b/webdupe/index.html
@@ -133,7 +133,7 @@
             //speakAboutUs(),
             'contact,contact us': {
               action_type: 'redirect',
-              action_value: 'http://localhost/webspeechdemo/contact.html',
+              action_value: 'https://patelakash317.github.io/webdupe/contact.html',
             },
             'about,info,about us': {
               action_type: 'call_function',
