--- a/webduplex/contact.html
+++ b/webduplex/contact.html
@@ -4,11 +4,11 @@
 		<!-- sample origin: https://github.com/googlearchive/webplatform-samples -->
 		<!-- http://localhost/webspeechdemo/webspeechdemo.html -->
 		<meta charset="utf-8">
-		<title>WebDupe plugin</title>
+		<title>WebDuplex plugin</title>
 		<link href="./assets/css/bootstrap.min.css" rel="stylesheet">
-    <link href="./assets/webdupe/css/webdupe.min.css" rel="stylesheet">
+    <link href="./assets/webduplex/css/webduplex.min.css" rel="stylesheet">
     <style type="text/css">
-      .webdupenote{
+      .webduplexnote{
         position: fixed;
         bottom: 0;
         left: 0;
@@ -25,13 +25,13 @@
 		<h2>Thanks,</h2>
 		<h2>Akash Patel [@patelakash317]</h2>
 		<h2>Skyology Inc.</h2>
-		<a href="https://patelakash317.github.io/webdupe">Go back</a>
-    <p class="webdupenote">Quick Access Voice Keyboard Shortcut: Shift+S</p>
+		<a href="https://patelakash317.github.io/webduplex">Go back</a>
+    <p class="webduplexnote">Quick Access Voice Keyboard Shortcut: Shift+S</p>
 
 		<script type="text/javascript" src="./assets/js/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="./assets/js/popper.min.js"></script>
     <script type="text/javascript" src="./assets/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="./assets/webdupe/js/webdupe.min.js"></script>
+    <script type="text/javascript" src="./assets/webduplex/js/webduplex.min.js"></script>
     <!-- action functions -->
     <script>
       // request keywords
@@ -53,7 +53,7 @@
             'show_status': true, //true/false - to show status, Quick, Speak now, Errors etc.
             'contact,contact us': { // to redirect to contact page
               action_type: 'redirect',
-              action_value: 'https://patelakash317.github.io/webdupe/contact.html',
+              action_value: 'https://patelakash317.github.io/webduplex/contact.html',
             },
             'about,info,about us': { // to speak about this website
               action_type: 'call_function',
