--- a/webduplex-demo2/index.html
+++ b/webduplex-demo2/index.html
@@ -26,7 +26,8 @@
         text-align: center; 
         margin-top: 10px; 
         position: fixed; 
-        top: 100px;
+        top: 0;
+        overflow: auto;
         /*bottom: 0;*/
       }
       .action_credits{
@@ -110,7 +111,7 @@
         </div>
         <div class="col-md-7 product_content">
           <h3 class="m-0">Realme XT Smartphone</h3>
-          <small>Mobile > Smart > Brand > Reamle</small>
+          <small>Mobile > Smart > Brand > Realme</small>
           <br/><br/>
           <h5>Features</h5>
           <p class="m-0">
@@ -138,11 +139,18 @@
           <div class="center" id="headline"><a href="http://dvcs.w3.org/hg/speech-api/raw-file/tip/speechapi.html">WebDuplex.js <br/>Web voice action plugin</a> demonstration</div>Google Chrome (Akash Patel [@patelakash317])
           <!-- instructions -->
             <br/>Start using this plugin for free <br/><b><a href="https://github.com/patelakash317/webduplex.js">Click here https://github.com/patelakash317/webduplex.js</a></b>
-            <br/><br/>
-            To test this plugin, press button at bottom right cornor of this page.
-            <br/><br/>
-            <b>After pressing:</b><br/>
-            Test 1: Speak <b>"Bla bla bla"</b>
+            <div class="text-left">
+	            <br/><br/>
+	            To test this plugin, press mic button at bottom right cornor of this page.
+	            <br/><br/>
+	            <b>After pressing mic button:</b><br/>
+	            Test 1: Speak <b>"Information about this phone"</b><br/>
+	            Test 2: Speak <b>"Internal storage capacity"</b><br/>
+	            Test 3: Speak <b>"Processor used in this phone"</b><br/>
+	            Test 4: Speak <b>"Brand of this smartphone"</b><br/>
+	            Test 5: Speak <b>"Quality feature of this smartphone"</b><br/>
+	            Test 6: Speak <b>"Battery capacity"</b><br/>
+	          </div>
 
             <br/><br/>
             Likewise add any number of commands you want your users to get response of. 
