--- a/webduplex-demo2/index.html
+++ b/webduplex-demo2/index.html
@@ -70,7 +70,7 @@
   <body>
     <!-- nav -->
       <div class="navbar navbar-custom navbar-fixed-top" style="background: #ddd">
-        <div class="navbar-header"><a class="navbar-brand" href="<?php echo base_url();?>">Webduplex store</a>
+        <div class="navbar-header"><a class="navbar-brand" href="">Webduplex store</a>
           <a class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
