--- a/webduplex-demo2/index.html
+++ b/webduplex-demo2/index.html
@@ -336,9 +336,9 @@
         var voices = window.speechSynthesis.getVoices(); // find your prefered language from this list
         // console.log(voices); // uncomment this you will get the list in console, select one and pass it in below getLanguage function in second argument
         // let final_voices = getLanguage(voices, 'Google हिन्दी');
-        alert(voices);
-        voices = window.speechSynthesis.getVoices(); // find your prefered language from this list
-        alert(voices);
+        // alert(voices);
+        // voices = window.speechSynthesis.getVoices(); // find your prefered language from this list
+        // alert(voices);
         let final_voices = getLanguage(voices, 'Google US English');
         if(final_voices == 'not'){
           console.log('No supporting language found.');
@@ -365,9 +365,9 @@
           };
 
           // wait on voices to be loaded before fetching list
-          window.speechSynthesis.onvoiceschanged = function() {
-            window.speechSynthesis.getVoices();
-          };
+          // window.speechSynthesis.onvoiceschanged = function() {
+          //   window.speechSynthesis.getVoices();
+          // };
           window.speechSynthesis.speak(msg);
         }
       }
